--- a/userpool-federation/template.yaml
+++ b/userpool-federation/template.yaml
@@ -50,6 +50,7 @@ Resources:
                   - "cognito-idp:DescribeIdentityProvider"
                   - "cognito-idp:UpdateIdentityProvider"
                   - "cognito-idp:CreateIdentityProvider"
+                  - "cognito-idp:DeleteIdentityProvider"
                 Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
 
   FederationLogGroup:
