--- a/cognito/userpool-uicustomization/template.yaml
+++ b/cognito/userpool-uicustomization/template.yaml
@@ -1,38 +1,70 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Transform: "AWS::Serverless-2016-10-31"
-Description: "Cognito CloudFormation UICustomization"
+Description: "Cognito UserPool UI Customization CloudFormation Support"
 
 Parameters:
   Environment:
     Description: "Environment"
-    Type: String
+    Type: "String"
     Default: "dev"
+
+  S3Bucket:
+    Description: "S3 bucket for lambda code"
+    Type: "String"
+
+  S3Key:
+    Description: "Key to where lambda code is located"
+    Type: "String"
+
+  FunctionName:
+    Description: "The Function name"
+    Type: "String"
 
 Resources:
   Lambda:
-    Type: AWS::Serverless::Function
+    Type: "AWS::Lambda::Function"
+    DependsOn:
+      - "Role"
+      - "LogGroup"
     Properties:
-      FunctionName: !Sub cognito-cf-uicustomization-${AWS::Region}-${Environment}
-      Description: !Sub cognito-cf-uicustomization-${AWS::Region}-${Environment}
-      Handler: handler
-      Runtime: go1.x
-      CodeUri: handler.zip
+      FunctionName: !Sub "${FunctionName}-${AWS::Region}-${Environment}"
+      Description: !Sub "${FunctionName}-${AWS::Region}-${Environment}"
+      Role: !GetAtt "Role.Arn"
+      Handler: "handler"
+      Runtime: "go1.x"
+      Code:
+        S3Bucket: !Ref "S3Bucket"
+        S3Key: !Ref "S3Key"
       Environment:
         Variables:
-          ENVIRONMENT: !Ref Environment
+          ENVIRONMENT: !Ref "Environment"
       Timeout: 60
       MemorySize: 128
-      Policies:
-        - Statement:
-          - Effect: "Allow"
-            Action:
-              - "cognito-idp:SetUICustomization"
-            Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
 
+  Role:
+    Type: "AWS::IAM::Role"
+    Properties:
+      RoleName: !Sub "${FunctionName}-role-${AWS::Region}-${Environment}"
+      ManagedPolicyArns:
+        - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: "Allow"
+            Action: "sts:AssumeRole"
+            Principal:
+              Service: "lambda.amazonaws.com"
+      Policies:
+        - PolicyName: !Sub "${FunctionName}-policy"
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: "Allow"
+                Action:
+                  - "cognito-idp:SetUICustomization"
+                Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
 
   LogGroup:
-    Type: AWS::Logs::LogGroup
+    Type: "AWS::Logs::LogGroup"
     Properties:
-      LogGroupName: !Sub /aws/lambda/cognito-cf-uicustomization-${AWS::Region}-${Environment}
+      LogGroupName: !Sub "/aws/lambda/${FunctionName}-${AWS::Region}-${Environment}"
       RetentionInDays: 90
-
