--- a/cognito/userpool-federation/template.yaml
+++ b/cognito/userpool-federation/template.yaml
@@ -58,7 +58,14 @@ Resources:
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
-              - "IAM Statements Here"
+              - Effect: "Allow"
+                Action:
+                  - "cognito-idp:UpdateUserPoolClient"
+                  - "cognito-idp:DescribeIdentityProvider"
+                  - "cognito-idp:UpdateIdentityProvider"
+                  - "cognito-idp:CreateIdentityProvider"
+                  - "cognito-idp:DeleteIdentityProvider"
+                Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
 
   LogGroup:
     Type: "AWS::Logs::LogGroup"
