--- a/cognito/userpool-client/template.yaml
+++ b/cognito/userpool-client/template.yaml
@@ -1,5 +1,5 @@
 AWSTemplateFormatVersion: "2010-09-09"
-Description: "Cognito UserPool Federation CloudFormation Support"
+Description: "Cognito UserPool Client CloudFormation Support"
 
 Parameters:
   Environment:
@@ -58,7 +58,14 @@ Resources:
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
-              - "IAM Statements Here"
+              - Effect: "Allow"
+                Action:
+                  - "cognito-idp:UpdateUserPoolClient"
+                  - "cognito-idp:DescribeUserPoolClient"
+                  - "cognito-idp:CreateUserPoolClient"
+                  - "cognito-idp:DeleteUserPoolClient"
+                  - "cognito-idp:ListUserPoolClients"
+                Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
 
   LogGroup:
     Type: "AWS::Logs::LogGroup"
