--- a/example/template.yaml
+++ b/example/template.yaml
@@ -58,14 +58,7 @@ Resources:
           PolicyDocument:
             Version: "2012-10-17"
             Statement:
-              - Effect: "Allow"
-                Action:
-                  - "cognito-idp:UpdateUserPoolClient"
-                  - "cognito-idp:DescribeIdentityProvider"
-                  - "cognito-idp:UpdateIdentityProvider"
-                  - "cognito-idp:CreateIdentityProvider"
-                  - "cognito-idp:DeleteIdentityProvider"
-                Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
+              - "IAM Statements Here"
 
   LogGroup:
     Type: "AWS::Logs::LogGroup"
