--- a/ecs/tag/template.yaml
+++ b/ecs/tag/template.yaml
@@ -64,8 +64,8 @@ Resources:
                   - "ecs:UntagResource"
                 Resource:
                   - !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:cluster/*"
-                  - !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:task-definition*"
-                  - !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:service/cluster-name/service-name*"
+                  - !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:task-definition/*"
+                  - !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:service/*
 
   LogGroup:
     Type: "AWS::Logs::LogGroup"
