--- a/ecs/tag/template.yaml
+++ b/ecs/tag/template.yaml
@@ -65,7 +65,7 @@ Resources:
                 Resource:
                   - !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:cluster/*"
                   - !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:task-definition/*"
-                  - !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:service/*
+                  - !Sub "arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:service/*"
 
   LogGroup:
     Type: "AWS::Logs::LogGroup"
