--- a/cognito/userpool-domain/template.yaml
+++ b/cognito/userpool-domain/template.yaml
@@ -60,11 +60,9 @@ Resources:
             Statement:
               - Effect: "Allow"
                 Action:
-                  - "cognito-idp:UpdateUserPoolClient"
-                  - "cognito-idp:DescribeIdentityProvider"
-                  - "cognito-idp:UpdateIdentityProvider"
-                  - "cognito-idp:CreateIdentityProvider"
-                  - "cognito-idp:DeleteIdentityProvider"
+                  - "cognito-idp:DescribeUserPoolDomain"
+                  - "cognito-idp:CreateUserPoolDomain"
+                  - "cognito-idp:DeleteUserPoolDomain"
                 Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
 
   LogGroup:
