--- a/cognito/userpool-domain/template.yaml
+++ b/cognito/userpool-domain/template.yaml
@@ -61,9 +61,12 @@ Resources:
               - Effect: "Allow"
                 Action:
                   - "cognito-idp:DescribeUserPoolDomain"
+                Resource: "*"
+              - Effect: "Allow"
+                Action:
                   - "cognito-idp:CreateUserPoolDomain"
                   - "cognito-idp:DeleteUserPoolDomain"
-                Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool*"
+                Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
 
   LogGroup:
     Type: "AWS::Logs::LogGroup"
