--- a/cognito/userpool-domain/template.yaml
+++ b/cognito/userpool-domain/template.yaml
@@ -60,10 +60,8 @@ Resources:
             Statement:
               - Effect: "Allow"
                 Action:
+                  - "cognito-idp:DescribeUserPool"
                   - "cognito-idp:DescribeUserPoolDomain"
-                Resource: "*"
-              - Effect: "Allow"
-                Action:
                   - "cognito-idp:CreateUserPoolDomain"
                   - "cognito-idp:DeleteUserPoolDomain"
                 Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
