--- a/cognito/userpool-domain/template.yaml
+++ b/cognito/userpool-domain/template.yaml
@@ -63,7 +63,7 @@ Resources:
                   - "cognito-idp:Describe*"
                   - "cognito-idp:CreateUserPoolDomain"
                   - "cognito-idp:DeleteUserPoolDomain"
-                Resource: !Sub "arn:aws:cognito-idp:${AWS::Region}:${AWS::AccountId}:userpool/*"
+                Resource: "*"
 
   LogGroup:
     Type: "AWS::Logs::LogGroup"
