--- a/cognito/userpool-domain/template.yaml
+++ b/cognito/userpool-domain/template.yaml
@@ -61,7 +61,7 @@ Resources:
               - Effect: "Allow"
                 Action:
                   - "cloudfront:ListDistributions"
-                  - "cognito-idp:Describe*"
+                  - "cognito-idp:DescribeUserPoolDomain"
                   - "cognito-idp:CreateUserPoolDomain"
                   - "cognito-idp:DeleteUserPoolDomain"
                 Resource: "*"
