Fixed typo in permissions.

--- a/cognito/identitypool-roles/template.yaml
+++ b/cognito/identitypool-roles/template.yaml
@@ -60,7 +60,7 @@ Resources:
             Statement:
               - Effect: "Allow"
                 Action:
-                  - "cognito-idp:SetIdentityPoolRoles"
+                  - "cognito-identity:SetIdentityPoolRoles"
                 Resource: "*"
 
   LogGroup:
