added iam passrole.

--- a/cognito/identitypool-roles/template.yaml
+++ b/cognito/identitypool-roles/template.yaml
@@ -61,6 +61,7 @@ Resources:
               - Effect: "Allow"
                 Action:
                   - "cognito-identity:SetIdentityPoolRoles"
+                  - "iam:PassRole"
                 Resource: "*"
 
   LogGroup:
